fix(navigation): Readability and misplaced items in mobile navigation.

--- a/src/layouts/_nav.scss
+++ b/src/layouts/_nav.scss
@@ -1,6 +1,6 @@
 @import "__common.scss";
 
-$menuBackground: rgba(0, 6, 39, 0.30980392156862746);
+$menuBackground: rgba(2, 0, 8, 0.91);
 $menuColor: rgb(252, 251, 247);
 
 #menu-toggle-button {
@@ -142,6 +142,7 @@ $menuColor: rgb(252, 251, 247);
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-flow: column;
     transition: left 0.2s ease-out;
     will-change: "left";
     ul {
@@ -156,6 +157,14 @@ $menuColor: rgb(252, 251, 247);
         a {
           font-size: 1.4rem;
         }
+      }
+    }
+
+    .additional-nav {
+      display: block;
+
+      .light_switch {
+        padding-left: 0;
       }
     }
   }
